# medical-dashboard-backend

./: .env.example  README.md  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: dependencies.py  jwt.py  models.py  pass_utils.py  routes.py
app/billing/: models.py  routes.py
app/clinics/: models.py  routes.py
app/contact/: routes.py
app/dashboard/: routes.py
app/exports/: routes.py
app/followups/: models.py  routes.py
app/patients/: models.py  routes.py
app/pdf/: pdf_generator.py  routes.py
app/services/: models.py  routes.py
app/settings/: routes.py
app/templates/: models.py  routes.py
app/utils/: cloudinary.py  email_parser.py  logger.py  mail_module.py  pagination.py  query_params.py
app/utils/templates/: onboard.html  password_reset.html  query_message.html
app/visits/: models.py  routes.py
